refactor: rework SSE
