# packages/backend/openapi.json
@@ -479,56 +479,6 @@
                 }
             }
         },
-        "/chats/{slug}/messages/stream": {
-            "get": {
-                "tags": [
-                    "chat"
-                ],
-                "summary": "Get Chat Messages Stream",
-                "operationId": "2::get_chat_messages_stream",
-                "parameters": [
-                    {
-                        "name": "slug",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "title": "Slug"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful Response",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "401": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/HTTPUnauthorizedError"
-                                }
-                            }
-                        },
-                        "description": "Unauthorized"
-                    },
-                    "422": {
-                        "description": "Validation Error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/HTTPValidationError"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/documents/{id}/mark-uploaded": {
             "put": {
                 "tags": [
@@ -632,6 +582,32 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/sse/": {
+            "get": {
+                "summary": "Connect",
+                "operationId": "4::connect",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPUnauthorizedError"
                                 }
                             }
                         }
